Fix wrapping issues with code and add code snippet for updating DOM attribute

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ h2 {
 
 pre {
   margin: 0;
+  white-space: pre-wrap;
 }
 
 code {
