--- a/experiments/text-editor/index.css
+++ b/experiments/text-editor/index.css
@@ -43,7 +43,6 @@ code {
     top: 0;
     left: 0;
     pointer-events: none;
-    white-space: break-spaces;
 }
 
 #demo {
